--- a/tab.html
+++ b/tab.html
@@ -19,9 +19,27 @@
 		$(this).addClass('current');
 		$("#"+tab_id).addClass('current');
 	})
+	
+	
 
 })
   </script>
+  
+  <script type="text/javascript">
+
+$(document).ready(function(){
+
+    var str = "    I Love jQuery    ";
+
+    str = jQuery.trim(str);
+
+    alert(str);
+
+});
+7
+</script>
+
+  
   <style>
 		.tab-content{
 			display: none; 
