--- a/index.html
+++ b/index.html
@@ -4,82 +4,42 @@
   <title>Bootstrap Example</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
-<style>
+<body>
 
-  .rotate_img span { position: absolute; }
-  .rotate_img img { width:100%; }
-  .rotate_img span:nth-of-type(1) { animation-delay: 15s }
-  .rotate_img span:nth-of-type(2) { animation-delay: 12.5s }
-  .rotate_img span:nth-of-type(3) { animation-delay: 10s }
-  .rotate_img span:nth-of-type(4) { animation-delay: 7.5s }
-  .rotate_img span:nth-of-type(5) { animation-delay: 5s }
-  .rotate_img span:nth-of-type(6) { animation-delay: 2.5s }
-  .rotate_img span:nth-of-type(7) { animation-delay: 0s }
-  .rotate_img span { animation-name: multiple-item-crossfade; animation-duration: 17.5s; animation-iteration-count: infinite }
+<nav class="navbar navbar-expand-md bg-dark navbar-dark">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse mr-auto" id="collapsibleNavbar">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>    
+    </ul>
+  </div>  
+</nav>
+<br>
 
-  @keyframes multiple-item-crossfade { 0%, 10.5714285714% {
-      opacity:1
-      }
-      14.2857142857%, 96.2857142857% {
-      opacity:0
-      }
-      100% {
-      opacity:1
-      }
-    }
-
-
-  .slider_text { float:left;width:100%;margin:20px 0px; }
-  .home_text { font-weight: 700;  line-height: 1.15em; font-size: 54px;  line-height: 72px; }
-  .slider_text span { position: absolute; left: 0; top:-24px; background: #fff; width: 100%; color: #2690ff; animation-name: multiple-item-crossfade; animation-duration: 17.5s; animation-iteration-count: infinite }
-.slider_text span:nth-of-type(1) { animation-delay: 15s }
-.slider_text span:nth-of-type(2) { animation-delay: 12.5s }
-.slider_text span:nth-of-type(3) { animation-delay: 10s }
-.slider_text span:nth-of-type(4) { animation-delay: 7.5s }
-.slider_text span:nth-of-type(5) { animation-delay: 5s }
-.slider_text span:nth-of-type(6) { animation-delay: 2.5s }
-.slider_text span:nth-of-type(7) { animation-delay: 0s }
-.slider_text  { position: relative; left: 0;  }
-  
-</style>
-<body> 
-
-<div class="container clearfix">
-
-
-
-
-<div style="position: relative; max-width: 835px; height: 310px;">
-  <div style="overflow: hidden; max-height: 283px; max-width: 274px; z-index: 0; position: absolute; bottom: 0px; left: 49px; ">
-    <a href="https://www.flipsnack.com/Ellenclee/7-days-to-self-love.html">
-      <img src="https://s3.amazonaws.com/files.flipsnack.net/collections/items/181ae176030a4bf6636251ci77993691/covers/fsdxiqtzgseo9k7s/small" alt="email cover" style="max-width: 274px;">
-    </a>
-  </div>
-  <div class="content-edit content-edit-lg" style="z-index: 1; font-weight: 900; color: rgb(65, 72, 89); font-size: 41px; position: absolute; top: 50px; right: 50px;  max-width: 390px; text-align: left; line-height: 1em; overflow: visible;"
-    contenteditable="false">
-    7 Days to Self Love
-  </div>
-  <div class="content-edit content-edit-sm" style="z-index: 1; font-weight: 500; color: rgb(111, 118, 133); font-size: 16px; position: absolute; bottom: 93px; right: 49px; text-align: left; max-width: 372px; padding: 17px 0px; border-top: 1px solid rgb(234, 234, 234); border-bottom: 1px solid rgb(234, 234, 234);"
-    contenteditable="false">
-    Take a look at this publication to see my recent work. I made this flipbook using flipsnack.com</div>
-    <div class="content-edit content-edit-sm" style="z-index: 1; font-weight: 500; color: rgb(111, 118, 133); font-size: 16px; position: absolute; bottom: 30px; right: 50px; text-align: left; max-width: 372px; padding: 17px 0px;"
-    contenteditable="false">
-    <a style="background: #edd734;color: #000; padding: 4px 12px; cursor:pointer"> Read Book <a> </div>
-  
+<div class="container">
+  <h3>Collapsible Navbar</h3>
+  <p>In this example, the navigation bar is hidden on small screens and replaced by a button in the top right corner (try to re-size this window).</p>
+  <p>Only when the button is clicked, the navigation bar will be displayed.</p>
+  <p>Tip: You can also remove the .navbar-expand-md class to ALWAYS hide navbar links and display the toggler button.</p>
 </div>
-
-
-<script>
-$(window).scroll(function() {
-   if($(window).scrollTop() + $(window).height() > $(document).height() - 50) {
-       alert("near bottom!");
-   }
-});
-</script>
 
 </body>
 </html>
+
+
