fullpage demo included

--- a/animated_slider/index.html
+++ b/animated_slider/index.html
@@ -8,10 +8,6 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/animations.css">
 
-<style>
-
-</style>
-
 </head>
 <body>
 <section class="page_slider">
@@ -37,7 +33,7 @@
                                     </div>
                                     <div class="intro_layer" data-animation="fadeIn">
                                         <div class="d-inline-block">
-                                            <button type="button" class="btn btn-outline-maincolor center-block" data-animation="fadeIn">Subsctibe to Newsletter</button>
+                                            <button type="button" class="btn btn-primary center-block" data-animation="fadeIn">Subsctibe to Newsletter</button>
                                         </div>
                                     </div>
                                 </div>
@@ -60,18 +56,18 @@
                                 <div class="intro_layers">
                                     <div class="intro_layer" data-animation="pullUp">
                                         <h3 class="intro_before_featured_word">
-                                            Stuck in a ‘career rut’?
+                                            Stuck in a Development?
                                         </h3>
                                     </div>
                                     <div class="intro_layer" data-animation="pullDown">
                                         <h2 class="text-uppercase intro_featured_word">
                                             Help us match to
-                                            <br> Your hr role
+                                            <br> Your Dev role
                                         </h2>
                                     </div>
                                     <div class="intro_layer" data-animation="fadeIn">
                                         <div class="d-inline-block">
-                                            <button type="button" class="btn btn-outline-maincolor center-block" data-animation="fadeIn">Subsctibe to Newsletter</button>
+                                            <button type="button" class="btn btn-primary center-block" data-animation="fadeIn">Subsctibe to Newsletter</button>
                                         </div>
                                     </div>
                                 </div>
@@ -85,40 +81,7 @@
                 </div>
                 <!-- eof .container -->
             </li>
-            <li class="ds text-center">
-                <img src="images/3.jpg" alt="">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <div class="intro_layers_wrapper">
-                                <div class="intro_layers">
-                                    <div class="intro_layer" data-animation="pullDown">
-                                        <h3 class="intro_before_featured_word">
-                                            Launch Your recruitment career
-                                        </h3>
-                                    </div>
-                                    <div class="intro_layer" data-animation="pullUp">
-                                        <h2 class="text-uppercase intro_featured_word">
-                                            With innovate
-                                            <br> Сonsultancy
-                                        </h2>
-                                    </div>
-                                    <div class="intro_layer" data-animation="fadeIn">
-                                        <div class="d-inline-block">
-                                            <button type="button" class="btn btn-outline-maincolor center-block">Join Our HR</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- eof .intro_layers -->
-                            </div>
-                            <!-- eof .intro_layers_wrapper -->
-                        </div>
-                        <!-- eof .col-* -->
-                    </div>
-                    <!-- eof .row -->
-                </div>
-                <!-- eof .container -->
-            </li>
+            
         </ul>
         <ul class="flex-direction-nav">
             <li class="flex-nav-prev">
