--- a/buttons.html
+++ b/buttons.html
@@ -51,15 +51,31 @@
       transform: scaleX(1);
       opacity: 1;
     }
+    .menu-hover {position: relative; padding:10px; font-size: 20px; color: #555;    display: inline-block;}
+    .menu-hover:after {content: ""; position: absolute; left: 0; right: 0; bottom: 0; width: 100%; height: 2px; background-color:#cccc;  transform: scalex(0); transition:all 0.3s ease 0s;}
+    .menu-hover:hover:after {transform: scaleX(1);}
+
+
+    .button-two {position: relative;padding:7px 20px; font-size: 20px; color: #555; display: inline-block;}
+    .button-two:after {content: '';position: absolute;z-index:-1;transition: all .3s ease-out;background: #666;width:0%; left: 0;bottom: 0;top: 0;}
+    .button-two:hover:after {width: 100%; }
+    .button-two:hover {color: #fff !important;}
+
   </style>
 
   <body>
     <div class="container">
       <div class="row mt-4 mb-4">
-        <div class="col-sm-6">
+        <div class="col-sm-3">
           <div class="outline-btn-hover">
             <a class="btn-outline-hover" href="#"> View all </a>
           </div>
+        </div>
+        <div class="col-sm-3">
+          <a href="#" class="menu-hover"> About us </a>
+        </div>
+        <div class="col-sm-3">
+          <a href="#" class="button-two"> About us </a>
         </div>
       </div>
     </div>
