updates css and js and radio html

--- a/fliter_gallery/index.html
+++ b/fliter_gallery/index.html
@@ -25,9 +25,12 @@
           <div class="filters gallery-filters text-lg-right">
               <a href="#" data-filter="*" class="active selected">All</a>
               <a href="#" data-filter=".corporate">Corporate</a>
-              <a href="#" data-filter=".business">Business</a>								
+             							
           </div>
          </div>
+		  <div class="filters gallery-filters text-lg-right">
+              <a href="#" data-filter=".business">Business</a>								
+          </div>
       </div>
       <div class="row isotope-wrapper masonry-layout c-mb-30 gallery-image-regular" data-filters=".gallery-filters">
           <div class="col-xl-4 mb-2 col-sm-6 business">
