--- a/contact_form1.html
+++ b/contact_form1.html
@@ -1,22 +1,57 @@
 <div class="contact">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-10 mx-auto">
             <div class="form-group">
-                [text* your-name placeholder "First Name*"]
+                [text* your-name placeholder "Name*"]
             </div>
-			<div class="form-group">
-                [text* last-name placeholder "Surname*"]
+            <div class="row no-gutters">
+                <div class="col-md-6">
+                    <div class="form-group pr-2">
+                        [email*  your-email placeholder "Email*"]
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group pl-2">
+                        [text* your-phone placeholder "Phone Number"]
+                    </div>
+                </div>
             </div>
             <div class="form-group">
-                [email*  your-email placeholder "Email*"]
-            </div>
-            <div class="form-group">
-                [text* phonenumber placeholder "Phone"]
-            </div>
-            <div class="form-group">
-                [text* placeholder "Product and solution you are interested*"]
+                [textarea your-message placeholder "Message"]
             </div>
         </div>
+    </div>
+    <div class="submit-btn">
+        <div class="row">
+            <div class="col-sm-10 mx-auto text-center">
+                [submit "Submit"]
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="contact">
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="form-group">
+				<label>Name</label>
+                [text* your-name placeholder "First Name*"]
+            </div>
+		</div>
+		<div class="col-sm-6">
+            <div class="form-group">
+				<label>Email</label>
+                [email*  your-email placeholder "Email*"]
+            </div>
+        </div>
+    </div>
+	<div class="row">
+        <div class="col-sm-12">
+            <div class="form-group">
+				<label>Your Message</label>
+				[textarea your-message placeholder "Message"]
+            </div>
+		</div>
     </div>
 
     <div class="submit-btn">
